--- a/demo.deviserweb.com/cv/index.html
+++ b/demo.deviserweb.com/cv/index.html
@@ -121,7 +121,7 @@
                                 <div class="col m12 s12 l9 info wow fadeIn a1" data-wow-delay="0.1s" > <!-- text -->
                                     <div class="section-item-details">
                                         <h3 style="margin-top: 5px">Trần Đức Duy</h3>
-                                        <h5>Thực tập sinh Web PHP</h5>
+                                        <h5>Thực tập sinh JavaScript</h5>
                                <span>Ngày sinh: 07/09/1999</span>
                                     </div>             
                                 </div>
@@ -265,7 +265,7 @@
 
                                 <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
                                     <p>
-                                      <span> Mong </span>muốn trở thành một thực tập sinh Web PHP và xa hơn nữa là trở thành lập trình viên chính thức của Công Ty.
+                                      <span> Mong </span>muốn trở thành một thực tập sinh JavaScript và xa hơn nữa là trở thành lập trình viên chính thức của Công Ty.
                                         Được làm việc trong Công Ty với một môi trường năng động, nhiều thử thách để bản thân có thể phát triển nhằm mang đến
                                         những giá trị tốt nhất cho bản thân và đặc biệt hơn cả là cho Công Ty mình đang làm việc.
                                     </p>
@@ -290,7 +290,7 @@
                                     <h3>Trường Đại học Công Nghiệp Hà Nội</h3>
                                     <span> Bắt đầu từ 8/2017 đến nay</span>
                                     <p>- Là sinh viên khoa Công nghệ thông tin chuyên ngành Hệ thống thông tin.</p>
-                                    <p>- Hiện tại đang là sinh viên năm 4. Trong trường tôi đã từng học về C/C++, SQL Server ...</p>
+                                    <p>- Hiện tại đang là sinh viên năm 4. Trong trường tôi đã từng học về C/C++, SQL Server,C#, VueJs,PHP,Laravel ...</p>
                                 </div>
                                 <div class="custom-content-wrapper wow fadeIn a3" data-wow-delay="0.3s" >
                                     <h3>Chứng Chỉ</h3>
